k8s/location-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: location-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: location-service
  template:
    metadata:
      labels:
        app: location-service
    spec:
      containers:
        - name: location-service
          image: arshad441/location-service:latest
          ports:
            - containerPort: 8080
