k8s/matching-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matching-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: matching-service
  template:
    metadata:
      labels:
        app: matching-service
    spec:
      containers:
        - name: matching-service
          image: arshad441/matching-service:latest
          ports:
            - containerPort: 8080
