k8s/ride-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ride-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ride-service
  template:
    metadata:
      labels:
        app: ride-service
    spec:
      containers:
        - name: ride-service
          image: arshad441/ride-service:latest
          ports:
            - containerPort: 8080
