k8s/location-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: location-service
spec:
  selector:
    app: location-service
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
