k8s/matching-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matching-service
spec:
  selector:
    app: matching-service
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
