k8s/ride-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ride-service
spec:
  selector:
    app: ride-service
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
